--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -1,5 +1,5 @@
 .vistas{
-    background-color: #ececec;
+    background-color: #c1a57b;
     width: 100%;
     height: 50px;
 
@@ -8,6 +8,6 @@
     align-items: center;
 }
 .button{
-    color: #000000;
+    color: #222831;
     font-size: 25px;
 }
