--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header titulo='Catálogo Autos'></app-header>
 <app-vistas></app-vistas>
-
+<app-list></app-list>
 <router-outlet></router-outlet>
