--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,6 +1,25 @@
 <div class="list">
     <div *ngFor='let auto of autos' class="lelement">
-        <div><img src="../../assets/images/eye.png"></div>
+        <div (click)="open(infoAuto,auto)"><img src="../../assets/images/eye.png"></div>
         <div>{{auto.submarca}}  {{auto.modelo}}</div>
     </div>
 </div>
+
+<ng-template #infoAuto let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Detalle de Automóvil</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form>
+        <div class="form-group texto">
+            <div>Marca: {{autoSeleccionado.marca}}</div>
+            <div>Submarca: {{autoSeleccionado.submarca}}</div>
+            <div>Modelo: {{autoSeleccionado.modelo}}</div>
+            <div>Descripcion: {{autoSeleccionado.descripcion}}</div>
+        </div>
+      </form>
+    </div>
+  </ng-template>
