--- a/src/app/vistas/vistas.component.html
+++ b/src/app/vistas/vistas.component.html
@@ -1,4 +1,4 @@
-<div class="vistas">
-    <div href="" class="button">Lista</div>
-    <div href="" class="button">Tabla</div>
-</div>
+<nav class="vistas">
+    <a routerLinkActive="active" routerLink="/list" class="button">Lista</a>
+    <a routerLinkActive="active" routerLink="/table" class="button">Tabla</a>
+</nav>
