--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -8,6 +8,22 @@
     align-items: center;
 }
 .button{
-    color: #222831;
+    color: #c1a57b;
     font-size: 25px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #202020;
+    border: 1px solid #FFFFFF;
+    letter-spacing: 1px;
+    text-decoration: none;
 }
+.active{
+    background-color: #aa926d;
+}
+.active:hover{
+    background-color: #816f55 !important;
+}
+.button:hover {
+    background-color: #aa926d;
+  }
