--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -22,7 +22,7 @@
     background-color: #aa926d;
 }
 .active:hover{
-    background-color: #816f55 !important;
+    background-color: #aa926d !important;
 }
 .button:hover {
     background-color: #aa926d;
