--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -1,5 +1,5 @@
 .vistas{
-    background-color: #c1a57b;
+    background-color: #dbbb8b;
     width: 100%;
     height: 50px;
 
@@ -8,7 +8,7 @@
     align-items: center;
 }
 .button{
-    color: #c1a57b;
+    color: #dbbb8b;
     font-size: 25px;
     width: 100%;
     height: 100%;
