--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,1 +1,22 @@
-<h1>Placeholder para la tabla :D</h1>
+<div class="pri">
+    <div class="pad"><table class="table table-striped">
+        <thead>
+            <tr>
+            <th scope="col">Marca</th>
+            <th scope="col">Submarca</th>
+            <th scope="col">Modelo</th>
+            <th scope="col">Descripcion</th>
+            <th scope="col">Fecha</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let auto of autos;">
+            <td>{{ auto.marca }}</td>
+            <td>{{ auto.submarca }}</td>
+            <td>{{ auto.modelo }}</td>
+            <td>{{ auto.descripcion }}</td>
+            <td>{{ auto.fecha_registro}}</td>
+            </tr>
+        </tbody>
+    </table></div>
+</div>
