--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -13,7 +13,7 @@
             <tr *ngFor="let auto of autos;">
             <td>{{ auto.marca }}</td>
             <td>{{ auto.submarca }}</td>
-            <td>{{ auto.modelo }}</td>
+            <td>{{ auto.modelos }}</td>
             <td>{{ auto.descripcion }}</td>
             <td>{{ auto.fecha_registro}}</td>
             </tr>
