--- a/src/app/vistas/vistas.component.css
+++ b/src/app/vistas/vistas.component.css
@@ -1,5 +1,5 @@
 .vistas{
-    background-color: #dbbb8b;
+    background-color: #b90000;
     width: 100%;
     height: 50px;
 
@@ -8,22 +8,22 @@
     align-items: center;
 }
 .button{
-    color: #dbbb8b;
+    color: #b90000;
     font-size: 25px;
     width: 100%;
     height: 100%;
     text-align: center;
-    color: #202020;
+    color: #ffffff;
     border: 1px solid #FFFFFF;
     letter-spacing: 1px;
     text-decoration: none;
 }
 .active{
-    background-color: #aa926d;
+    background-color: #6b0000;
 }
 .active:hover{
-    background-color: #aa926d !important;
+    background-color: #6b0000 !important;
 }
 .button:hover {
-    background-color: #aa926d;
+    background-color: #a10202;
   }
