--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -4,6 +4,7 @@
     height: 100%;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 }
 .pad{
     width: 80%;
@@ -13,4 +14,10 @@
     align-items: center;
     border: 1px solid rgb(233, 233, 233);
     border-radius: 10px;
+}
+img{
+    height: 20px;
+    width: 20px;
+    margin: 5px;
+    cursor: pointer;
 }
