--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -6,7 +6,7 @@
     <div>
       <ngb-pagination
       [(page)]="page"
-      [collectionSize]="autos?.length"
+      [collectionSize]="colsize"
       aria-label="Default pagination"></ngb-pagination></div>
 </div>
 
