--- a/src/app/modal-add-update/modal-add-update.component.html
+++ b/src/app/modal-add-update/modal-add-update.component.html
@@ -5,24 +5,25 @@
     </button>
 </div>
 <div class="modal-body">
-      <div class="form-group">
-        <label for="Marca">Marca</label>
-        <input type="text" class="form-control" id="Marca" placeholder="Agrega la Marca" value="{{auto.marca}}">
-      </div>
-      <div class="form-group">
-        <label for="Marca">Submarca</label>
-        <input type="text" class="form-control" id="Marca" placeholder="Agrega la Submarca" value="{{auto.submarca}}">
-      </div>
-      <div class="form-group">
-        <label for="Marca">Modelos</label>
-        <input type="text" disabled class="form-control" id="Marca" placeholder="Agrega el Modelo" value="{{auto.modelos}}">
-      </div>
-      <div class="form-group">
-        <label for="Marca">Descripción</label>
-        <input type="text" class="form-control" id="Marca" placeholder="Agrega la Descripción" value="{{auto.descripcion}}">
-      </div>
-      
+  <form #formAutos = "ngForm">
+    <div class="form-group">
+      <label for="Marca">Marca</label>
+      <input type="text" class="form-control" id="marca" placeholder="Agrega la Marca" [(ngModel)]="auto.marca" name="marca">
+    </div>
+    <div class="form-group">
+      <label for="Marca">Submarca</label>
+      <input type="text" class="form-control" id="submarca" placeholder="Agrega la Submarca" [(ngModel)]="auto.submarca" name="submarca">
+    </div>
+    <div class="form-group">
+      <label for="Marca">Modelos</label>
+      <input type="text" disabled class="form-control" id="modelos" placeholder="Agrega el Modelo" [(ngModel)]="auto.modelos" name="modelos">
+    </div>
+    <div class="form-group">
+      <label for="Marca">Descripción</label>
+      <input type="text" class="form-control" id="descripcion" placeholder="Agrega la Descripción" [(ngModel)]="auto.descripcion" name="descripcion">
+    </div>
+  </form>    
 </div>
 <div class="modal-footer">
-    <button type="submit" class="btn btn-primary" (click)="activeModal.close('Save click')">Guardar</button>  
+    <button type="submit" class="btn btn-primary" (click)="activeModal.close(auto)">Guardar</button>  
 </div>
