--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -10,6 +10,7 @@
             <th scope="col">Submarca</th>
             <th scope="col">Modelo</th>
             <th scope="col">Descripcion</th>
+            <th scope="col">Modelos</th>
             <th></th>
             <th></th>
             </tr>
@@ -21,6 +22,7 @@
                 <td>{{ auto.submarca }}</td>
                 <td>{{ auto.modelos }}</td>
                 <td>{{ auto.descripcion }}</td>
+                <td>{{ auto.modelos | formatoModelos }}</td>
                 <td (click)="openModalEliminar(auto)"><img src="../../assets/images/trash-solid.png"></td>
                 <td (click)="openModalEditar(auto)"><img src="../../assets/images/edit-solid.png"></td>
             </tr>
